# Chess-Engine-API

./: .dockerignore  .gitignore  CMakeLists.txt  ChessEngineApp.cpp  ChessEngineApp.h  Dockerfile  README.md  bindings.cpp  fly.toml  main.cpp  main.py  pch.h  requirements.txt
.github/workflows/: deploy.yml
ChessEngineLib/: Board.cpp  Board.h  CMakeLists.txt  Engine.cpp  Engine.h  pch.h
Tests/: CMakeLists.txt  DifficultMoveGenerationTest.cpp  MoveGenerationTest.cpp  gtest_main.cpp
